# wasm-split-prototype

./: index.html
crates/example/: Cargo.toml
crates/example/src/: lib.rs
