[package]
name = "example"
version = "0.1.0"
authors = ["Jeremy Maitin-Shepard <jeremy@jeremyms.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.82"
console_error_panic_hook = "0.1.7"
futures = "0.3.30"
gloo-net = "0.5.0"
js-sys = "0.3.69"
leptos = { path = "/Users/gjohnston/Documents/Projects/leptos-main/leptos/leptos" }        #, features = ["tracing"]}
leptos_router = { path = "/Users/gjohnston/Documents/Projects/leptos-main/leptos/router" } # , features = ["tracing"]}
send_wrapper = "0.6.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
wasm-bindgen = "0.2.92"
wasm_split = { path = "../wasm_split", optional = true }
#tracing = "0.1"
#tracing-subscriber = "0.3"
#tracing-subscriber-wasm = "0.1"

[features]
split = ["dep:wasm_split"]
